--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,5 +44,5 @@ missing_docs_in_private_items = "deny"
 arithmetic_side_effects = "deny"
 
 [dependencies]
-anyhow = "1.0.98"
 console = "0.15.11"
+thiserror = "2.0.12"
