add missing docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ panic = "deny"
 string_slice = "deny"
 unchecked_duration_subtraction = "deny"
 unreachable = "deny"
-missing_docs_in_private_items = "deny"
+missing_docs_in_private_items = "allow"
 arithmetic_side_effects = "deny"
 
 [dependencies]
