--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -25,4 +25,4 @@ jobs:
     - name: Clippy
       run: cargo clippy --all-targets
     - name: Run tests
-      run: cargo test
+      run: cargo test -- --test-threads 1
